# project-catalog

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  main.rs  projects.rs  update.rs  utils.rs
