[package]
name = "project-catalog"
version = "0.2.1"
edition = "2024"

[[bin]]
name = "project-catalog"

[dependencies]
dirs = "6.0.0"
iced = { version = "0.14.0", features = ["hot", "image", "tokio", "sipper"] }
process-wrap = { version = "9.1.0", features = ["std"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
self-replace = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
tokio = { version = "1.52.0", features = ["full"] }
